--- a/build.properties
+++ b/build.properties
@@ -28,55 +28,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                plugin_de_DE.properties,\
-               asm-analysis-2.2.1.jar,\
-               asm-attrs-2.2.1.jar,\
-               asm-commons-2.2.1.jar,\
-               asm-tree-2.2.1.jar,\
-               asm-util-2.2.1.jar,\
-               carol-2.0.5.jar,\
-               commons-beanutils-1.7.0.jar,\
-               commons-codec-1.2.jar,\
-               commons-collections-2.1.jar,\
-               commons-dbcp-1.2.1.jar,\
-               commons-digester-1.8.jar,\
-               commons-fileupload-1.1.jar,\
-               commons-io-1.4.jar,\
-               commons-jci-core-1.0.jar,\
-               commons-jci-eclipse-1.0.jar,\
-               commons-jci-fam-1.0.jar,\
-               commons-jci-groovy-1.0.jar,\
-               commons-jci-janino-1.0.jar,\
-               commons-jci-javac-1.0.jar,\
-               commons-jci-rhino-1.0.jar,\
-               commons-jexl-1.1.jar,\
-               commons-lang-2.3.jar,\
-               commons-pool-1.2.jar,\
-               commons-transaction-1.1.jar,\
-               commons-vfs-1.0.jar,\
-               dependency-0.2.jar,\
-               eFaps-Kernel-1.0-SNAPSHOT.jar,\
-               geronimo-spec-jta-1.0-M1.jar,\
-               groovy-all-1.0-jsr-03.jar,\
-               howl-logger-0.1.11.jar,\
-               janino-2.4.3.jar,\
-               jcl104-over-slf4j-1.5.0.jar,\
-               jetty-6.1.5.jar,\
-               jetty-naming-6.1.5.jar,\
-               jetty-util-6.1.5.jar,\
-               joda-time-1.6.jar,\
-               jotm_jrmp_stubs-2.0.10.jar,\
-               jotm-2.0.10.jar,\
-               js-1.6R5.jar,\
-               jta-1.0.1B.jar,\
-               junit-3.8.1.jar,\
-               log4j-over-slf4j-1.5.0.jar,\
-               ow2-connector-1.5-spec-1.0-M1.jar,\
-               postgresql-8.3-603.jdbc3.jar,\
-               servlet-api-2.5-6.1.5.jar,\
-               slf4j-api-1.5.0.jar,\
-               xercesImpl-2.0.2.jar,\
-               xml-apis-1.0.b2.jar,\
-               yuicompressor-2.2.5.jar,\
                icons/common_dbproperties/Admin_Common_DBPropertiesImage.gif,\
                icons/common_systemattribute/Admin_Common_SystemAttributeImage.gif,\
                icons/datamodel/Admin_DataModel_SQLTableImage.gif,\
@@ -91,5 +42,72 @@ bin.includes = META-INF/,\
                icons/userinterface/Admin_UI_MenuImage.gif,\
                icons/userinterface/Admin_UI_SearchImage.gif,\
                icons/userinterface/Admin_UI_TableImage.gif,\
-               icons/datamodel/Admin_DataModel_Type+Edit+Image.gif
+               icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
+               lib/activation-1.1.jar,\
+               lib/ant-1.7.0.jar,\
+               lib/ant-launcher-1.7.0.jar,\
+               lib/asm-3.1.jar,\
+               lib/bcmail-jdk14-1.38.jar,\
+               lib/bcmail-jdk14-138.jar,\
+               lib/bcprov-jdk14-1.38.jar,\
+               lib/bcprov-jdk14-138.jar,\
+               lib/bctsp-jdk14-1.38.jar,\
+               lib/carol-2.0.5.jar,\
+               lib/commons-beanutils-1.8.0.jar,\
+               lib/commons-codec-1.4.jar,\
+               lib/commons-collections-2.1.jar,\
+               lib/commons-dbcp-1.2.1.jar,\
+               lib/commons-digester-1.8.1.jar,\
+               lib/commons-httpclient-3.1.jar,\
+               lib/commons-io-1.4.jar,\
+               lib/commons-jexl-1.1.jar,\
+               lib/commons-lang-2.4.jar,\
+               lib/commons-logging-1.0.4.jar,\
+               lib/commons-pool-1.2.jar,\
+               lib/commons-transaction-1.1.jar,\
+               lib/commons-vfs-1.0.jar,\
+               lib/DynamicJasper-3.0.13.jar,\
+               lib/efaps-kernel-1.5.0.jar,\
+               lib/geronimo-spec-jta-1.0-M1.jar,\
+               lib/groovy-all-1.5.8.jar,\
+               lib/howl-logger-0.1.11.jar,\
+               lib/itext-2.1.7.jar,\
+               lib/ivy-2.1.0.jar,\
+               lib/jasperreports-3.7.4.jar,\
+               lib/jaxb-api-2.1.jar,\
+               lib/jaxb-impl-2.1.12.jar,\
+               lib/jcl104-over-slf4j-1.5.0.jar,\
+               lib/jcommon-1.0.15.jar,\
+               lib/jdtcore-3.1.0.jar,\
+               lib/jersey-apache-client-1.1.5.jar,\
+               lib/jersey-client-1.1.5.jar,\
+               lib/jersey-core-1.1.5.jar,\
+               lib/jersey-multipart-1.1.5.jar,\
+               lib/jersey-server-1.1.5.jar,\
+               lib/jetty-6.1.5.jar,\
+               lib/jetty-naming-6.1.5.jar,\
+               lib/jetty-util-6.1.5.jar,\
+               lib/jfreechart-1.0.12.jar,\
+               lib/jline-0.9.94.jar,\
+               lib/joda-time-1.6.jar,\
+               lib/jotm_jrmp_stubs-2.0.10.jar,\
+               lib/jotm-2.0.10.jar,\
+               lib/jsr311-api-1.1.1.jar,\
+               lib/jta-1.0.1B.jar,\
+               lib/junit-3.8.1.jar,\
+               lib/jxl-2.6.jar,\
+               lib/log4j-over-slf4j-1.5.0.jar,\
+               lib/mimepull-1.4.jar,\
+               lib/mysql-connector-java-5.1.9.jar,\
+               lib/ow2-connector-1.5-spec-1.0-M1.jar,\
+               lib/poi-3.6.jar,\
+               lib/postgresql-8.3-603.jdbc3.jar,\
+               lib/quartz-1.8.4.jar,\
+               lib/servlet-api-2.5-6.1.5.jar,\
+               lib/slf4j-api-1.5.0.jar,\
+               lib/stax-api-1.0-2.jar,\
+               lib/wikiutil-0.0.3.jar,\
+               lib/xercesImpl-2.0.2.jar,\
+               lib/xml-apis-1.0.b2.jar,\
+               lib/yuicompressor-2.3.6.jar
 jars.compile.order = .
