--- a/plugin.xml
+++ b/plugin.xml
@@ -268,7 +268,7 @@
       </decorator>
       <decorator
             adaptable="true"
-            icon="icons/common_systemattribute/Admin_Common_SystemAttributeImage.gif"
+            icon="icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.gif"
             id="org.efaps.eclipse.decorators.common.systemattribute"
             label="eFaps Common System Attribute Decorator"
             lightweight="true"
@@ -448,139 +448,6 @@
       </decorator>
    </extension>
    <extension
-         point="org.eclipse.ui.editors">
-      <editor
-            class="org.eclipse.wst.xml.ui.internal.editor.XMLEditorPluginImages"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/user/Admin_User_GroupImage.gif"
-            id="org.efaps.eclipse.editors.user.group"
-            name="eFaps User Group Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.user.group">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/user/Admin_User_JAASSystemImage.gif"
-            id="org.efaps.eclipse.editors.user.jaassystem"
-            name="eFaps User JAAS System Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.user.jaassystem">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/user/Admin_User_RoleImage.gif"
-            id="org.efaps.eclipse.editors.user.role"
-            name="eFaps User Role Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.user.role">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/common_dbproperties/Admin_Common_DBPropertiesBundleImage.gif"
-            id="org.efaps.eclipse.editors.common.dbproperties"
-            name="eFaps Common DB Properties Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.common.dbproperties">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/common_systemattribute/Admin_Common_SystemAttributeImage.gif"
-            id="org.efaps.eclipse.editors.common.systemattribute"
-            name="eFaps Common System Attribute Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.common.systemattribute">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/datamodel/Admin_DataModel_TypeImage.gif"
-            id="org.efaps.eclipse.editors.datamodel.type"
-            name="eFaps Data Model Type Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.datamodel.type">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/datamodel/Admin_DataModel_SQLTableImage.gif"
-            id="org.efaps.eclipse.editors.datamodel.sqltable"
-            name="eFaps Data Model SQL Table Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.datamodel.sqltable">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.eclipse.wst.xml.ui.internal.editor.XMLEditorPluginImages"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_CommandImage.gif"
-            id="org.efaps.eclipse.editors.command"
-            name="eFaps User Interface Command Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.command">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_FormImage.gif"
-            id="org.efaps.eclipse.editors.form"
-            name="eFaps User Interface Form Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.form">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_ImageImage.gif"
-            id="org.efaps.eclipse.editors.image"
-            name="eFaps User Interface Image Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.image">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_MenuImage.gif"
-            id="org.efaps.eclipse.editors.menu"
-            name="eFaps User Interface Menu Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.menu">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_SearchImage.gif"
-            id="org.efaps.eclipse.editors.search"
-            name="eFaps User Interface Search Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.search">
-         </contentTypeBinding>
-      </editor>
-      <editor
-            class="org.efaps.eclipse.editors.XMLEditor"
-            contributorClass="org.eclipse.ui.part.EditorActionBarContributor"
-            icon="icons/userinterface/Admin_UI_TableImage.gif"
-            id="org.efaps.eclipse.editors.table"
-            name="eFaps User Interface Table Editor">
-         <contentTypeBinding
-               contentTypeId="org.efaps.eclipse.contenttypes.table">
-         </contentTypeBinding>
-      </editor>
-   </extension>
-   <extension
          point="org.eclipse.ui.preferencePages">
       <page
             class="org.efaps.eclipse.PreferencePage"
@@ -609,6 +476,13 @@
             name="%plugin.command.update">
          <defaultHandler
                class="org.efaps.eclipse.handlers.UpdateHandler">
+         </defaultHandler>
+      </command>
+      <command
+            id="org.efaps.eclipse.command.compile"
+            name="%plugin.command.compile">
+         <defaultHandler
+               class="org.efaps.eclipse.handlers.CompileHandler">
          </defaultHandler>
       </command>
    </extension>
@@ -648,6 +522,14 @@
                   id="org.efaps.eclipse.menus.connect"
                   style="push">
             </command>
+            <separator
+                  name="eFaps-eclipse-plugin.separator1">
+            </separator>
+            <command
+                  commandId="org.efaps.eclipse.command.compile"
+                  id="org.efaps.eclipse.menus.compile"
+                  style="push">
+            </command>
          </menu>
       </menuContribution>
       <menuContribution
@@ -670,6 +552,30 @@
             class="org.efaps.eclipse.EfapsConsoleFactory"
             label="%plugin.console">
       </consoleFactory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.viewActions">
+      <viewContribution
+            id="eFaps-eclipse-plugin.viewContribution1"
+            targetID="eFaps-eclipse-plugin.viewContribution1">
+      </viewContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.importWizards">
+      <category
+            id="org.efaps.eclipse.importWizards.sampleCategory"
+            name="Sample File Import">
+      </category>
+      <wizard
+            category="org.efaps.eclipse.importWizards.sampleCategory"
+            class="org.efaps.eclipse.wizards.CompileWizard"
+            icon="icons/sample.gif"
+            id="org.efaps.eclipse.importWizards.ImportWizard"
+            name="Import File">
+         <description>
+            Import a file from the local file system into the workspace.
+         </description>
+      </wizard>
    </extension>
 
 </plugin>
