- correction in definition for the eclipse plugin to reduce size
git-svn-id: https://efaps.googlecode.com/svn/eFaps-eclipse-plugin/trunk@5689 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/plugin.xml
+++ b/plugin.xml
@@ -485,6 +485,7 @@
          </defaultHandler>
       </command>
       <command
+            defaultHandler="org.efaps.eclipse.handlers.CompileHandler"
             id="org.efaps.eclipse.command.compile"
             name="%plugin.command.compile">
          <defaultHandler
