--- a/build.properties
+++ b/build.properties
@@ -52,25 +52,20 @@ bin.includes = META-INF/,\
                lib/bcprov-jdk14-1.38.jar,\
                lib/bcprov-jdk14-138.jar,\
                lib/bctsp-jdk14-1.38.jar,\
-               lib/carol-2.0.5.jar,\
                lib/commons-beanutils-1.8.0.jar,\
                lib/commons-codec-1.4.jar,\
                lib/commons-collections-2.1.jar,\
-               lib/commons-dbcp-1.2.1.jar,\
                lib/commons-digester-1.8.1.jar,\
                lib/commons-httpclient-3.1.jar,\
                lib/commons-io-1.4.jar,\
                lib/commons-jexl-1.1.jar,\
                lib/commons-lang-2.4.jar,\
-               lib/commons-logging-1.0.4.jar,\
-               lib/commons-pool-1.2.jar,\
                lib/commons-transaction-1.1.jar,\
                lib/commons-vfs-1.0.jar,\
                lib/DynamicJasper-3.0.13.jar,\
                lib/efaps-kernel-1.5.0.jar,\
                lib/geronimo-spec-jta-1.0-M1.jar,\
                lib/groovy-all-1.5.8.jar,\
-               lib/howl-logger-0.1.11.jar,\
                lib/itext-2.1.7.jar,\
                lib/ivy-2.1.0.jar,\
                lib/jasperreports-3.7.4.jar,\
@@ -84,30 +79,21 @@ bin.includes = META-INF/,\
                lib/jersey-core-1.1.5.jar,\
                lib/jersey-multipart-1.1.5.jar,\
                lib/jersey-server-1.1.5.jar,\
-               lib/jetty-6.1.5.jar,\
-               lib/jetty-naming-6.1.5.jar,\
-               lib/jetty-util-6.1.5.jar,\
                lib/jfreechart-1.0.12.jar,\
                lib/jline-0.9.94.jar,\
                lib/joda-time-1.6.jar,\
-               lib/jotm_jrmp_stubs-2.0.10.jar,\
-               lib/jotm-2.0.10.jar,\
                lib/jsr311-api-1.1.1.jar,\
-               lib/jta-1.0.1B.jar,\
                lib/junit-3.8.1.jar,\
                lib/jxl-2.6.jar,\
                lib/log4j-over-slf4j-1.5.0.jar,\
                lib/mimepull-1.4.jar,\
-               lib/mysql-connector-java-5.1.9.jar,\
-               lib/ow2-connector-1.5-spec-1.0-M1.jar,\
                lib/poi-3.6.jar,\
-               lib/postgresql-8.3-603.jdbc3.jar,\
+               lib/postgresql-8.4-701.jdbc4.jar,\
                lib/quartz-1.8.4.jar,\
-               lib/servlet-api-2.5-6.1.5.jar,\
                lib/slf4j-api-1.5.0.jar,\
                lib/stax-api-1.0-2.jar,\
                lib/wikiutil-0.0.3.jar,\
-               lib/xercesImpl-2.0.2.jar,\
-               lib/xml-apis-1.0.b2.jar,\
+               lib/xercesImpl-2.9.1.jar,\
+               lib/xml-apis-1.3.02.jar,\
                lib/yuicompressor-2.3.6.jar
 jars.compile.order = .
