-  rework of the eclipse plugin by removing all functionalities which need the efaps-kernel, priority has now the REST API
git-svn-id: https://efaps.googlecode.com/svn/eFaps-eclipse-plugin/trunk@5691 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/plugin.properties
+++ b/plugin.properties
@@ -30,6 +30,10 @@ plugin.console                                                                  
 plugin.toolbar.updateCommand.Label                                              = Update
 plugin.toolbar.updateCommand.Tooltip                                            = Update current
 
+plugin.popup.menu = eFaps
+plugin.popup.action.restPost = send to Rest Server
+plugin.command.restCompile = Compile via Rest
+
 org.efaps.eclipse.EfapsPlugin.connect.logInit                                   = Initialize eFaps Database Connection
 org.efaps.eclipse.EfapsPlugin.connect.logDatabaseType                           = - using database ''{0}''
 org.efaps.eclipse.EfapsPlugin.connect.logFactory                                = - using factory ''{0}''
@@ -51,4 +55,9 @@ org.efaps.eclipse.handlers.ReloadCacheHandler.execute.notInitialized            
 org.efaps.eclipse.handlers.UpdateHandler.execute.failed                         = Update failed!
 org.efaps.eclipse.handlers.UpdateHandler.execute.notInitialized                 = The connection to the eFaps database is not initialized!
 
-
+org.efaps.eclipse.rest.RestClient.init = Initialize Rest Client
+org.efaps.eclipse.rest.RestClient.init.response =  - Response: {0}
+org.efaps.eclipse.rest.RestClient.compile = Sending Compile Request with target '{0}'
+org.efaps.eclipse.rest.RestClient.compile.response =  - Response: {0}
+org.efaps.eclipse.rest.RestClient.post = Sending Post with files '{0}'
+org.efaps.eclipse.rest.RestClient.post.response = - Response: {0}
