--- a/build.properties
+++ b/build.properties
@@ -44,56 +44,20 @@ bin.includes = META-INF/,\
                icons/userinterface/Admin_UI_TableImage.gif,\
                icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
                lib/activation-1.1.jar,\
-               lib/ant-1.7.0.jar,\
-               lib/ant-launcher-1.7.0.jar,\
                lib/asm-3.1.jar,\
-               lib/bcmail-jdk14-1.38.jar,\
-               lib/bcmail-jdk14-138.jar,\
-               lib/bcprov-jdk14-1.38.jar,\
-               lib/bcprov-jdk14-138.jar,\
-               lib/bctsp-jdk14-1.38.jar,\
-               lib/commons-beanutils-1.8.0.jar,\
-               lib/commons-codec-1.4.jar,\
-               lib/commons-collections-2.1.jar,\
-               lib/commons-digester-1.8.1.jar,\
+               lib/commons-codec-1.2.jar,\
                lib/commons-httpclient-3.1.jar,\
-               lib/commons-io-1.4.jar,\
-               lib/commons-jexl-1.1.jar,\
-               lib/commons-lang-2.4.jar,\
-               lib/commons-transaction-1.1.jar,\
-               lib/commons-vfs-1.0.jar,\
-               lib/DynamicJasper-3.0.13.jar,\
-               lib/efaps-kernel-1.5.0.jar,\
-               lib/geronimo-spec-jta-1.0-M1.jar,\
-               lib/groovy-all-1.5.8.jar,\
-               lib/itext-2.1.7.jar,\
-               lib/ivy-2.1.0.jar,\
-               lib/jasperreports-3.7.4.jar,\
                lib/jaxb-api-2.1.jar,\
                lib/jaxb-impl-2.1.12.jar,\
                lib/jcl104-over-slf4j-1.5.0.jar,\
-               lib/jcommon-1.0.15.jar,\
-               lib/jdtcore-3.1.0.jar,\
                lib/jersey-apache-client-1.1.5.jar,\
                lib/jersey-client-1.1.5.jar,\
                lib/jersey-core-1.1.5.jar,\
                lib/jersey-multipart-1.1.5.jar,\
                lib/jersey-server-1.1.5.jar,\
-               lib/jfreechart-1.0.12.jar,\
-               lib/jline-0.9.94.jar,\
-               lib/joda-time-1.6.jar,\
                lib/jsr311-api-1.1.1.jar,\
-               lib/junit-3.8.1.jar,\
-               lib/jxl-2.6.jar,\
                lib/log4j-over-slf4j-1.5.0.jar,\
                lib/mimepull-1.4.jar,\
-               lib/poi-3.6.jar,\
-               lib/postgresql-8.4-701.jdbc4.jar,\
-               lib/quartz-1.8.4.jar,\
                lib/slf4j-api-1.5.0.jar,\
-               lib/stax-api-1.0-2.jar,\
-               lib/wikiutil-0.0.3.jar,\
-               lib/xercesImpl-2.9.1.jar,\
-               lib/xml-apis-1.3.02.jar,\
-               lib/yuicompressor-2.3.6.jar
+               lib/stax-api-1.0-2.jar
 jars.compile.order = .
