--- a/plugin.properties
+++ b/plugin.properties
@@ -57,7 +57,7 @@ org.efaps.eclipse.handlers.UpdateHandler.execute.notInitialized                 
 
 org.efaps.eclipse.rest.RestClient.init = Initialize Rest Client
 org.efaps.eclipse.rest.RestClient.init.response =  - Response: {0}
-org.efaps.eclipse.rest.RestClient.compile = Sending Compile Request with target '{0}'
+org.efaps.eclipse.rest.RestClient.compile = Sending Compile Request with target ''{0}''
 org.efaps.eclipse.rest.RestClient.compile.response =  - Response: {0}
-org.efaps.eclipse.rest.RestClient.post = Sending Post with files '{0}'
+org.efaps.eclipse.rest.RestClient.post = Sending Post with files ''{0}''
 org.efaps.eclipse.rest.RestClient.post.response = - Response: {0}
