- adding the possibility to copy a configuration item to another with automatic change of name and UUID for the eclipse plugin
git-svn-id: https://efaps.googlecode.com/svn/eFaps-eclipse-plugin/trunk@6399 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/plugin.properties
+++ b/plugin.properties
@@ -32,6 +32,7 @@ plugin.toolbar.updateCommand.Tooltip                                            
 
 plugin.popup.menu = eFaps
 plugin.popup.action.restPost = send to Rest Server
+plugin.popup.action.copyCI = copy Configuration Item
 plugin.command.restCompile = Compile via Rest
 
 org.efaps.eclipse.EfapsPlugin.connect.logInit                                   = Initialize eFaps Database Connection
