--- a/build.properties
+++ b/build.properties
@@ -45,8 +45,6 @@ bin.includes = META-INF/,\
                icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
                lib/activation-1.1.jar,\
                lib/asm-3.1.jar,\
-               lib/commons-codec-1.2.jar,\
-               lib/commons-httpclient-3.1.jar,\
                lib/jaxb-api-2.1.jar,\
                lib/jaxb-impl-2.1.12.jar,\
                lib/jcl104-over-slf4j-1.5.0.jar,\
@@ -59,5 +57,7 @@ bin.includes = META-INF/,\
                lib/log4j-over-slf4j-1.5.0.jar,\
                lib/mimepull-1.4.jar,\
                lib/slf4j-api-1.5.0.jar,\
-               lib/stax-api-1.0-2.jar
+               lib/stax-api-1.0-2.jar,\
+               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.xcf,\
+               lib/commons-io-1.3.2.jar
 jars.compile.order = .
