--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 
 <!--
 
- Copyright 2003 - 2009 The eFaps Team
+ Copyright 2003 - 2011 The eFaps Team
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -583,6 +583,13 @@
             Import a file from the local file system into the workspace.
          </description>
       </wizard>
+      <wizard
+            category="org.efaps.eclipse.importWizards.sampleCategory"
+            class="org.efaps.eclipse.importWizards.ImportWizard"
+            icon="icons/sample.gif"
+            id="org.efaps.eclipse.importWizards.ImportWizard"
+            name="Import File">
+      </wizard>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
@@ -626,6 +633,12 @@
                class="org.efaps.eclipse.popup.actions.RestPostAction"
                id="org.efaps.eclipse.popup.actions.restPost"
                label="%plugin.popup.action.restPost"
+               menubarPath="org.efaps.eclipse.popup.menu/restgroup">
+         </action>
+         <action
+               class="org.efaps.eclipse.popup.actions.CopyCIAction"
+               id="org.efaps.eclipse.popup.actions.restPost"
+               label="%plugin.popup.action.copyCI"
                menubarPath="org.efaps.eclipse.popup.menu/restgroup">
          </action>
       </objectContribution>
