--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,23 @@
             		<artifactId>commons-logging</artifactId>
             		<groupId>commons-logging</groupId>
             	</exclusion>
+            	<exclusion>
+            		<artifactId>commons-httpclient</artifactId>
+            		<groupId>commons-httpclient</groupId>
+            	</exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-multipart</artifactId>
             <version>1.1.5</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.apache.commons</groupId>
+        	<artifactId>commons-io</artifactId>
+        	<version>1.3.2</version>
+        	<type>jar</type>
+        	<scope>compile</scope>
         </dependency>
     </dependencies>
 
