- eclipse-plugin: update to use newest jersey 1.14
git-svn-id: https://efaps.googlecode.com/svn/eFaps-eclipse-plugin/trunk@8042 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/build.properties
+++ b/build.properties
@@ -43,21 +43,20 @@ bin.includes = META-INF/,\
                icons/userinterface/Admin_UI_SearchImage.gif,\
                icons/userinterface/Admin_UI_TableImage.gif,\
                icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
+               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.xcf,\
                lib/activation-1.1.jar,\
                lib/asm-3.1.jar,\
+               lib/commons-io-1.3.2.jar,\
                lib/jaxb-api-2.1.jar,\
                lib/jaxb-impl-2.1.12.jar,\
                lib/jcl104-over-slf4j-1.5.0.jar,\
-               lib/jersey-apache-client-1.1.5.jar,\
-               lib/jersey-client-1.1.5.jar,\
-               lib/jersey-core-1.1.5.jar,\
-               lib/jersey-multipart-1.1.5.jar,\
-               lib/jersey-server-1.1.5.jar,\
-               lib/jsr311-api-1.1.1.jar,\
+               lib/jersey-apache-client-1.14.jar,\
+               lib/jersey-client-1.14.jar,\
+               lib/jersey-core-1.14.jar,\
+               lib/jersey-multipart-1.14.jar,\
+               lib/jersey-server-1.14.jar,\
                lib/log4j-over-slf4j-1.5.0.jar,\
-               lib/mimepull-1.4.jar,\
+               lib/mimepull-1.6.jar,\
                lib/slf4j-api-1.5.0.jar,\
-               lib/stax-api-1.0-2.jar,\
-               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.xcf,\
-               lib/commons-io-1.3.2.jar
+               lib/stax-api-1.0-2.jar
 jars.compile.order = .
