--- a/build.properties
+++ b/build.properties
@@ -29,7 +29,6 @@ bin.includes = META-INF/,\
                plugin.properties,\
                plugin_de_DE.properties,\
                icons/common_dbproperties/Admin_Common_DBPropertiesImage.gif,\
-               icons/common_systemattribute/Admin_Common_SystemAttributeImage.gif,\
                icons/datamodel/Admin_DataModel_SQLTableImage.gif,\
                icons/datamodel/Admin_DataModel_TypeImage.gif,\
                icons/user/Admin_User_GroupImage.gif,\
@@ -43,20 +42,31 @@ bin.includes = META-INF/,\
                icons/userinterface/Admin_UI_SearchImage.gif,\
                icons/userinterface/Admin_UI_TableImage.gif,\
                icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
-               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.xcf,\
                lib/activation-1.1.jar,\
-               lib/asm-3.1.jar,\
+               lib/aopalliance-repackaged-2.2.0.jar,\
                lib/commons-io-1.3.2.jar,\
+               lib/hk2-api-2.2.0.jar,\
+               lib/hk2-locator-2.2.0.jar,\
+               lib/hk2-utils-2.2.0.jar,\
+               lib/javassist-3.18.1-GA.jar,\
+               lib/javax.annotation-api-1.2.jar,\
+               lib/javax.inject-2.2.0.jar,\
+               lib/javax.ws.rs-api-2.0.jar,\
                lib/jaxb-api-2.1.jar,\
                lib/jaxb-impl-2.1.12.jar,\
-               lib/jcl104-over-slf4j-1.5.0.jar,\
-               lib/jersey-apache-client-1.14.jar,\
-               lib/jersey-client-1.14.jar,\
-               lib/jersey-core-1.14.jar,\
-               lib/jersey-multipart-1.14.jar,\
-               lib/jersey-server-1.14.jar,\
-               lib/log4j-over-slf4j-1.5.0.jar,\
-               lib/mimepull-1.6.jar,\
-               lib/slf4j-api-1.5.0.jar,\
-               lib/stax-api-1.0-2.jar
+               lib/jersey-client-2.7.jar,\
+               lib/jersey-common-2.7.jar,\
+               lib/jersey-guava-2.7.jar,\
+               lib/jersey-media-multipart-2.7.jar,\
+               lib/jersey-server-2.7.jar,\
+               lib/log4j-over-slf4j-1.7.6.jar,\
+               lib/mimepull-1.9.3.jar,\
+               lib/osgi-resource-locator-1.0.1.jar,\
+               lib/slf4j-api-1.7.6.jar,\
+               lib/stax-api-1.0-2.jar,\
+               lib/validation-api-1.1.0.Final.jar,\
+               icons/datamodel/Admin_DataModel_DimensionImage.gif,\
+               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.gif
 jars.compile.order = .
+bin.excludes = icons/common_systemconfiguration/
+
