- eclipse-plugin: basic rework
git-svn-id: https://efaps.googlecode.com/svn/eFaps-eclipse-plugin/trunk@12460 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/build.properties
+++ b/build.properties
@@ -29,6 +29,8 @@ bin.includes = META-INF/,\
                plugin.properties,\
                plugin_de_DE.properties,\
                icons/common_dbproperties/Admin_Common_DBPropertiesImage.gif,\
+               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.gif,\
+               icons/datamodel/Admin_DataModel_DimensionImage.gif,\
                icons/datamodel/Admin_DataModel_SQLTableImage.gif,\
                icons/datamodel/Admin_DataModel_TypeImage.gif,\
                icons/user/Admin_User_GroupImage.gif,\
@@ -64,9 +66,7 @@ bin.includes = META-INF/,\
                lib/osgi-resource-locator-1.0.1.jar,\
                lib/slf4j-api-1.7.6.jar,\
                lib/stax-api-1.0-2.jar,\
-               lib/validation-api-1.1.0.Final.jar,\
-               icons/datamodel/Admin_DataModel_DimensionImage.gif,\
-               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.gif
+               lib/validation-api-1.1.0.Final.jar
 jars.compile.order = .
-bin.excludes = icons/common_systemconfiguration/
+
 
