- correction of build properties

--- a/build.properties
+++ b/build.properties
@@ -28,22 +28,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                plugin_de_DE.properties,\
-               icons/common_dbproperties/Admin_Common_DBPropertiesImage.gif,\
-               icons/common_systemconfiguration/Admin_Common_SystemConfigurationImage.gif,\
-               icons/datamodel/Admin_DataModel_DimensionImage.gif,\
-               icons/datamodel/Admin_DataModel_SQLTableImage.gif,\
-               icons/datamodel/Admin_DataModel_TypeImage.gif,\
-               icons/user/Admin_User_GroupImage.gif,\
-               icons/user/Admin_User_JAASSystemImage.gif,\
-               icons/user/Admin_User_PersonImage.gif,\
-               icons/user/Admin_User_RoleImage.gif,\
-               icons/userinterface/Admin_UI_CommandImage.gif,\
-               icons/userinterface/Admin_UI_FormImage.gif,\
-               icons/userinterface/Admin_UI_ImageImage.gif,\
-               icons/userinterface/Admin_UI_MenuImage.gif,\
-               icons/userinterface/Admin_UI_SearchImage.gif,\
-               icons/userinterface/Admin_UI_TableImage.gif,\
-               icons/datamodel/Admin_DataModel_Type+Edit+Image.gif,\
                lib/activation-1.1.jar,\
                lib/aopalliance-repackaged-2.4.0-b10.jar,\
                lib/commons-io-1.3.2.jar,\
@@ -65,7 +49,22 @@ bin.includes = META-INF/,\
                lib/osgi-resource-locator-1.0.1.jar,\
                lib/slf4j-api-1.7.6.jar,\
                lib/stax-api-1.0-2.jar,\
-               lib/joda-time-2.7.jar
+               lib/joda-time-2.7.jar,\
+               icons/Admin_Common_DBPropertiesBundleImage.gif,\
+               icons/Admin_Common_SystemConfigurationImage.gif,\
+               icons/Admin_DataModel_DimensionImage.gif,\
+               icons/Admin_DataModel_SQLTableImage.gif,\
+               icons/Admin_DataModel_TypeImage.gif,\
+               icons/Admin_UI_CommandImage.gif,\
+               icons/Admin_UI_FormImage.gif,\
+               icons/Admin_UI_ImageImage.gif,\
+               icons/Admin_UI_MenuImage.gif,\
+               icons/Admin_UI_SearchImage.gif,\
+               icons/Admin_UI_TableImage.gif,\
+               icons/Admin_User_CompanyImage.gif,\
+               icons/Admin_User_GroupImage.gif,\
+               icons/Admin_User_JAASSystemImage.gif,\
+               icons/Admin_User_RoleImage.gif
 jars.compile.order = .
 
 
