- adding icons to status and edit button

--- a/build.properties
+++ b/build.properties
@@ -64,7 +64,9 @@ bin.includes = META-INF/,\
                icons/Admin_User_CompanyImage.gif,\
                icons/Admin_User_GroupImage.gif,\
                icons/Admin_User_JAASSystemImage.gif,\
-               icons/Admin_User_RoleImage.gif
+               icons/Admin_User_RoleImage.gif,\
+               icons/Admin_DataModel_StatusImage.png,\
+               icons/Admin_DataModel_Type+Edit+Image.gif
 jars.compile.order = .
 
 
